--- a/src/app/components/add-event/add-event.component.html
+++ b/src/app/components/add-event/add-event.component.html
@@ -18,20 +18,36 @@
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
+
+                    <div style="display: flex; justify-content: space-between; margin-bottom: 20px;">
+                        <button mat-raised-button color="primary" type="button" (click)="setToday()" [ngClass]="isDate.isToday? 'active' : 'inactive'">Сегодня</button>
+                        <button mat-raised-button color="primary" type="button" (click)="setTomorrow()" [ngClass]="isDate.isTomorrow? 'active' : 'inactive'">Завтра</button>
+                        <button mat-raised-button color="primary" type="button" (click)="viewCalendar()" [ngClass]="isDate.isCalendar? 'active' : 'inactive'">Другая дата</button>
+                    </div>
         
-                    <mat-form-field color="accent" appearance="fill" style="width: 280px;">
+                    <mat-form-field color="accent" appearance="fill" style="width: 280px;" *ngIf="isDate.isCalendar">
                         <mat-label>Дата</mat-label>
                         <input formControlName="date" matInput [matDatepicker]="picker2" [matDatepickerFilter]="myFilter">
                         <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
                         <mat-datepicker #picker2 color="primary"></mat-datepicker>
                     </mat-form-field>
+
+                    <div style="display: flex; justify-content: space-between; margin-bottom: 20px;">
+                        <button style="width: 130px;" mat-raised-button color="primary" type="button" (click)="setNow()" [ngClass]="isTimeStart.isNow? 'active' : 'inactive'">Текущее время</button>
+                        <button style="width: 130px;" mat-raised-button color="primary" type="button" (click)="viewTimeStart()" [ngClass]="isTimeStart.isTime? 'active' : 'inactive'">Другое время</button>
+                    </div>
         
-                    <mat-form-field appearance="outline" style="width: 280px;">
+                    <mat-form-field appearance="outline" style="width: 280px;" *ngIf="isTimeStart.isTime">
                         <mat-label>Время начала события</mat-label>
                         <input formControlName="time_start" type="time" matInput name="time_start" min="00:00" max="23:59">
                     </mat-form-field>
+
+                    <div style="display: flex; justify-content: space-between; margin-bottom: 20px;">
+                        <button style="width: 130px;" mat-raised-button color="primary" type="button" (click)="setMidnight()" [ngClass]="isTimeEnd.isMidnight? 'active' : 'inactive'">До конца дня</button>
+                        <button style="width: 130px;" mat-raised-button color="primary" type="button" (click)="viewTimeEnd()" [ngClass]="isTimeEnd.isTime? 'active' : 'inactive'">Другое время</button>
+                    </div>
         
-                    <mat-form-field appearance="outline" style="width: 280px;">
+                    <mat-form-field appearance="outline" style="width: 280px;" *ngIf="isTimeEnd.isTime">
                         <mat-label>Время конца события</mat-label>
                         <input formControlName="time_end" type="time" matInput name="time_end" min="00:00" max="23:59">
                     </mat-form-field>
