--- a/src/app/components/add-event/add-event.component.html
+++ b/src/app/components/add-event/add-event.component.html
@@ -1,23 +1,27 @@
 <mat-dialog-content class="mat-typography">
             <form [formGroup]="addEventForm" novalidate (ngSubmit)="sendService()">
                 <div class="flex">
-                    <mat-form-field appearance="fill" style="width: 280px;">
+                    <p>Вид спорта: {{sport.name}}</p>
+                    <!-- <mat-form-field appearance="fill" style="width: 280px;">
                         <mat-label>Вид спорта</mat-label>
                         <mat-select formControlName="sport">
                             <mat-option *ngFor="let sport of sports?.results" [value]="sport.id">
                                 {{sport.name}}
                             </mat-option>
                         </mat-select>
-                    </mat-form-field>
+                    </mat-form-field> -->
+                    <img style="width: 30px; margin-bottom: 20px;" src="../../../assets/img/volleyball.png" alt="volleyball">
         
-                    <mat-form-field appearance="fill" style="width: 280px;">
+                    <p>Тип события: {{type.name}}</p>
+                    <!-- <mat-form-field appearance="fill" style="width: 280px;">
                         <mat-label>Тип события</mat-label>
                         <mat-select formControlName="type">
                             <mat-option *ngFor="let type of types?.results" [value]="type.id">
                                 {{type.name}}
                             </mat-option>
                         </mat-select>
-                    </mat-form-field>
+                    </mat-form-field> -->
+                    <mat-icon style="color: #000; margin-bottom: 20px;" aria-hidden="false" aria-label="Example logout icon">lock_open</mat-icon>
 
                     <div style="display: flex; justify-content: space-between; margin-bottom: 20px;">
                         <button mat-raised-button color="primary" type="button" (click)="setToday()" [ngClass]="isDate.isToday? 'active' : 'inactive'">Сегодня</button>
