--- a/src/app/components/map/dialog-events.component.html
+++ b/src/app/components/map/dialog-events.component.html
@@ -1,12 +1,9 @@
 <mat-dialog-content class="mat-typography">
   <div class="flex">
     <div>
-      <p>address: {{data.location.address}}</p>
-      <p>description: {{data.location.description}}</p>
-      <p>name: {{data.location.name}}</p>
-      <p>lat: {{data.location.lat}}</p>
-      <p>lon: {{data.location.lon}}</p>
-      <p>id: {{data.location.id}}</p>
+      <p>Адрес: {{data.location.address}}</p>
+      <p>Название: {{data.location.name}}</p>
+      <p>Описание: {{data.location.description}}</p>
       <button mat-raised-button color="primary" class="btn" (click)="openDialog(data.location.id)" mat-dialog-close>Добавить событие</button>
       <button mat-raised-button color="primary" class="btn" [routerLink]="['../location', data.location.id]" mat-dialog-close>Об организации</button>
     </div>
