--- a/src/app/components/events/events.component.html
+++ b/src/app/components/events/events.component.html
@@ -11,9 +11,7 @@
                         <mat-icon style="color: #EEF5F8; position: absolute; top: 0;" aria-hidden="false" aria-label="Example logout icon">person</mat-icon>
                     </span>
                 </div>
-                <p class="point" style="background: blue;" *ngIf="e.status.name == 'Зарегистрировано'"></p>
-                <p class="point" style="background: yellow;" *ngIf="e.status.name == 'Ожидается начало'"></p>
-                <p class="point" style="background: green;" *ngIf="e.status.name == 'Сейчас идет'"></p>
+                <p class="point" [ngStyle]="{'background': e.status.color}"></p> 
             </div>
             <p class="text" style="text-align: center; font-size: 28px; font-weight: bold;">{{e.short_time}}</p>
             <div class="flex">
