--- a/src/app/components/add-event/add-event.component.scss
+++ b/src/app/components/add-event/add-event.component.scss
@@ -15,7 +15,7 @@
 .bg__icon {
     border-radius: 5px;
     background: #e0e0e0;
-    box-shadow:  4px 4px 7px #bebebe, -4px -4px 7px #ffffff; 
+    box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
     width: 35px; 
     height: 35px; 
     display: flex; 
