send in profileForm fias_id

--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -31,8 +31,8 @@
                         <mat-label>Город</mat-label>
                         <input type="text" matInput [matAutocomplete]="auto" (change)="changeCity($event)" (input)="inputCity($event)" [formControl]="controlCity">
                         <mat-autocomplete #auto="matAutocomplete">
-                            <mat-option *ngFor="let city of cities" [value]="city.name" (click)="saveCity(city)">
-                                {{city.name}}
+                            <mat-option *ngFor="let city of cities" [value]="city.value" (click)="saveCity(city)">
+                                {{city.value}}
                             </mat-option>
                         </mat-autocomplete>
                     </mat-form-field>
@@ -41,8 +41,8 @@
                         <mat-label>Адрес</mat-label>
                         <input type="text" matInput [matAutocomplete]="auto2" (input)="inputAddress($event)" [formControl]="controlAddress">
                         <mat-autocomplete #auto2="matAutocomplete">
-                            <mat-option *ngFor="let address of addresses" [value]="address.name">
-                                {{address.name}}
+                            <mat-option *ngFor="let address of addresses" [value]="address.value" (click)="saveAddress(address)">
+                                {{address.value}}
                             </mat-option>
                         </mat-autocomplete>
                     </mat-form-field>
