--- a/src/app/components/header/dialog-city.component.html
+++ b/src/app/components/header/dialog-city.component.html
@@ -1,4 +1,5 @@
 <mat-dialog-content class="mat-typography">
+  <h1 mat-dialog-title>Поиск города</h1>
   <mat-form-field class="example-full-width" appearance="fill" style="width: 250px; margin-top: 20px;">
     <mat-label>Город</mat-label>
     <input type="text" matInput [matAutocomplete]="auto" (keyup)="inputCity($event)" [formControl]="controlCity">
