--- a/src/app/components/image-carousel/image-carousel.component.html
+++ b/src/app/components/image-carousel/image-carousel.component.html
@@ -7,10 +7,10 @@
       [ngStyle]="{'width.px': width}"
     >
   </div>
-  <button class="btn" (click)="back()">
+  <button class="btn" type="button" (click)="back()">
     <mat-icon style="color: #fff; padding-left: 9px;" aria-hidden="false" aria-label="Example home icon">arrow_back_ios</mat-icon>
   </button>
-  <button class="btn" (click)="next()">
+  <button class="btn" type="button" (click)="next()">
     <mat-icon style="color: #fff; padding-left: 3px;" aria-hidden="false" aria-label="Example home icon">arrow_forward_ios</mat-icon>
   </button>
 </div>  
